--- a/apps/web/nerdwork-plus/Dockerfile
+++ b/apps/web/nerdwork-plus/Dockerfile
@@ -1,35 +1,50 @@
 # Stage 1: Builder
 FROM node:22-alpine AS builder
 
-# Enable corepack (so pnpm works)
-# RUN corepack enable
+# Install pnpm directly
+RUN npm install -g pnpm@10.15.1
 
+# Set working directory
 WORKDIR /app
 
-# Copy only package manager files first
+# Copy only root files needed for dependency installation
 COPY package.json pnpm-workspace.yaml pnpm-lock.yaml ./
 
-# Install deps at root
-RUN pnpm install
+# Install dependencies at the root (monorepo level)
+RUN pnpm install --frozen-lockfile
 
-# Copy the full project (after deps)
-COPY . .
+# Copy the frontend app source (excluding pre-existing node_modules)
+COPY apps/web/nerdwork-plus ./apps/web/nerdwork-plus
 
-# Move into your app folder and build
+# Reinstall to ensure workspace links are correct
+RUN pnpm install --frozen-lockfile
+
+# Build the frontend app
 WORKDIR /app/apps/web/nerdwork-plus
 RUN pnpm build
-
 
 # Stage 2: Runner
 FROM node:22-alpine AS runner
 
+# Install pnpm directly
+RUN npm install -g pnpm@10.15.1
+
 WORKDIR /app
 
-# Copy only what we need from builder
-COPY --from=builder /app/apps/web/nerdwork-plus/.next ./.next
-COPY --from=builder /app/apps/web/nerdwork-plus/public ./public
-COPY --from=builder /app/apps/web/nerdwork-plus/package.json ./package.json
-COPY --from=builder /app/apps/web/nerdwork-plus/node_modules ./node_modules
+# Copy workspace configuration files
+COPY package.json pnpm-workspace.yaml pnpm-lock.yaml ./
+
+# Copy the app's package.json
+COPY --from=builder /app/apps/web/nerdwork-plus/package.json ./apps/web/nerdwork-plus/package.json
+
+# Install production dependencies only
+RUN pnpm install --prod --frozen-lockfile
+
+# Copy built assets
+COPY --from=builder /app/apps/web/nerdwork-plus/.next ./apps/web/nerdwork-plus/.next
+COPY --from=builder /app/apps/web/nerdwork-plus/public ./apps/web/nerdwork-plus/public
+
+WORKDIR /app/apps/web/nerdwork-plus
 
 EXPOSE 3000
 
