--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,12 @@
 name: CI/CD - Build, Test and Deploy
 
+# 🔄 WORKFLOW FLOW:
+# 1️⃣ changed-files     -> Detects what files changed
+# 2️⃣ build-and-test   -> Runs tests for changed components  
+# 3️⃣ docker-build-and-push -> Builds & pushes Docker image (main branch only)
+# 4️⃣ deploy-to-staging    -> Deploys to staging environment
+# 5️⃣ deploy-to-production -> Deploys to production (requires approval)
+
 permissions:
   contents: write
   issues: write
@@ -28,6 +35,7 @@ jobs:
           echo "backend=$(git diff --name-only HEAD^ HEAD | grep -E 'backend/.*\.(ts|js)$' | wc -l | xargs)" >> $GITHUB_OUTPUT
 
   build-and-test:
+    name: "🧪 Build and Test"
     runs-on: ubuntu-latest
     needs: changed-files
     strategy:
@@ -120,8 +128,8 @@ jobs:
             })
 
   docker-build-and-push:
-    name: Build and Push Docker Image
-    needs: [build-and-test, changed-files]
+    name: "🐳 Build and Push Docker Image"
+    needs: [build-and-test, changed-files]  # ⬅️ Waits for tests to pass
     if: success() && github.ref == 'refs/heads/main' && (needs.changed-files.outputs.frontend-tests > 0 || needs.changed-files.outputs.backend-tests > 0)
     runs-on: ubuntu-latest
     outputs:
@@ -250,8 +258,8 @@ jobs:
             });
 
   deploy-to-staging:
-    name: Deploy to Staging Environment
-    needs: [docker-build-and-push]
+    name: "🚀 Deploy to Staging Environment"
+    needs: [docker-build-and-push]  # ⬅️ Waits for Docker image to be ready
     if: success() && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     environment:
@@ -325,7 +333,9 @@ jobs:
           set +a
 
           # Update ECS services or other deployment steps
-          # Example: aws ecs update-service --cluster staging-cluster --service nerdwork-api --force-new-deployment --region eu-west-1
+          # Example: Deploy using the newly built image
+          echo "Deploying image version: ${{ needs.docker-build-and-push.outputs.image-version }}"
+          # aws ecs update-service --cluster staging-cluster --service nerdwork-frontend --force-new-deployment --region eu-west-1
 
           echo "✅ Deployment to staging environment completed"
 
@@ -372,8 +382,8 @@ jobs:
             });
 
   deploy-to-production:
-    name: Deploy to Production
-    needs: [deploy-to-staging]
+    name: "🏭 Deploy to Production"
+    needs: [deploy-to-staging]  # ⬅️ Waits for staging deployment success
     if: success() && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     environment:
